// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`M5 compiler — code generation > attributes commits to the scope that writes (async handlers, timers) 1`] = `
"import * as MD from "../out-runtime";
const WRITES_0 = ["./component.tsx#count"];
MD.installAccessTable({
  readers: {
    "./component.tsx#count": ["App", "App/*"]
  }
}, "App");
// Fixture: async commit attribution.
let count = 0;
export function AsyncCounter(id, parent) {
  let $s0, $t;
  const incLater = async () => {
    await Promise.resolve();
    count++;
    MD.commitWrites(WRITES_0);
  };
  const incTimer = () => {
    setTimeout(() => {
      count = 10;
      MD.commitWrites(WRITES_0);
    }, 0);
  };
  const update = () => {
    if ($s0 !== ($t = count)) {
      $s0 = $t;
      text2.data = $t == null || typeof $t === "boolean" ? "" : String($t);
    }
  };
  MD.register({
    id: id,
    parent: parent,
    render: update
  });
  const text0 = document.createTextNode("async");
  const button0 = document.createElement("button");
  button0.onclick = incLater;
  button0.appendChild(text0);
  const text1 = document.createTextNode("timer");
  const button1 = document.createElement("button");
  button1.onclick = incTimer;
  button1.appendChild(text1);
  const text2 = document.createTextNode("");
  if ($s0 !== ($t = count)) {
    $s0 = $t;
    text2.data = $t == null || typeof $t === "boolean" ? "" : String($t);
  }
  const span0 = document.createElement("span");
  span0.appendChild(text2);
  const div0 = document.createElement("div");
  div0.appendChild(button0);
  div0.appendChild(button1);
  div0.appendChild(span0);
  return div0;
}"
`;

exports[`M5 compiler — code generation > compiles eligible component list rows as lightweight factories (M5.10) 1`] = `
"import * as MD from "../out-runtime";
const WRITES_0 = ["./component.tsx#selected"];
const WRITES_1 = ["./component.tsx#items"];
MD.installAccessTable({
  readers: {
    "./component.tsx#items": ["App", "App/*"],
    "./component.tsx#selected": ["App", "App/*"]
  }
}, "App");
// Fixture: R7 component list rows — a Row component used via .map().
// Row reads 'selected' directly (the L1 rule: props are for item data,
// shared state is read inside the row), so a click must dirty ALL rows
// through the table's 'App/CompList/items/Row[*]' pattern.
const items = [{
  id: 1,
  label: 'one'
}, {
  id: 2,
  label: 'two'
}];
let selected = 0;
function Row(item, __memoRowId) {
  let $s0, $s1, $t;
  const update = () => {
    if ($s0 !== ($t = item.label)) {
      $s0 = $t;
      text0.data = $t == null || typeof $t === "boolean" ? "" : String($t);
    }
    if ($s1 !== ($t = selected === item.id ? 'danger' : '')) {
      $s1 = $t;
      li0.className = $t;
    }
  };
  const text0 = document.createTextNode("");
  if ($s0 !== ($t = item.label)) {
    $s0 = $t;
    text0.data = $t == null || typeof $t === "boolean" ? "" : String($t);
  }
  const li0 = document.createElement("li");
  if ($s1 !== ($t = selected === item.id ? 'danger' : '')) {
    $s1 = $t;
    li0.className = $t;
  }
  li0.onclick = () => {
    selected = item.id;
    MD.commitWrites(WRITES_0);
  };
  li0.appendChild(text0);
  return {
    nodes: [li0],
    entities: [],
    update: update,
    updateProps: __memoNext0 => {
      item = __memoNext0;
    }
  };
}
export function CompList(id, parent) {
  let $t;
  const add = () => {
    items.push({
      id: items.length + 1,
      label: 'three'
    });
    MD.commitWrites(WRITES_1);
  };
  const update = () => {
    region0.reconcile(items);
  };
  MD.register({
    id: id,
    parent: parent,
    render: update
  });
  const ul0 = document.createElement("ul");
  const region0 = MD.createListRegion(ul0, id + "/items", (item, rowId) => {
    const entry = Row(item, rowId);
    return {
      nodes: entry.nodes,
      entities: [],
      update: entry.update,
      updateProps: item => {
        entry.updateProps(item);
      }
    };
  }, item => item.id);
  region0.reconcile(items);
  const text0 = document.createTextNode("add");
  const button0 = document.createElement("button");
  button0.onclick = add;
  button0.appendChild(text0);
  const div0 = document.createElement("div");
  div0.appendChild(ul0);
  div0.appendChild(button0);
  return div0;
}"
`;

exports[`M5 compiler — code generation > compiles inline list rows to regions with row-scoped patterns (R7) 1`] = `
"import * as MD from "../out-runtime";
const WRITES_0 = ["./component.tsx#selected"];
const WRITES_1 = ["./component.tsx#items"];
MD.installAccessTable({
  readers: {
    "./component.tsx#items": ["App", "App/*"],
    "./component.tsx#selected": ["App/items/Row[*]", "App/items/Row[*]/*"]
  }
}, "App");
// Fixture: R7 inline list rows — the select-list shape written as plain TSX.
// 'selected' is read inside row JSX (row pattern) and written by row
// handlers (commitWrites — rows are multi-instance, never local).
// 'items.push' routes as a write to 'items' → local markDirty on the owner.
let items = [{
  id: 1,
  label: 'one'
}, {
  id: 2,
  label: 'two'
}];
let selected = 0;
export function InlineList(id, parent) {
  let $t;
  const add = () => {
    items.push({
      id: items.length + 1,
      label: 'three'
    });
    MD.commitWrites(WRITES_1);
  };
  const update = () => {
    region0.reconcile(items);
  };
  MD.register({
    id: id,
    parent: parent,
    render: update
  });
  const ul0 = document.createElement("ul");
  const region0 = MD.createListRegion(ul0, id + "/items", (item, rowId) => {
    let $s0, $s1, $t;
    const update = () => {
      if ($s0 !== ($t = item.label)) {
        $s0 = $t;
        text0.data = $t == null || typeof $t === "boolean" ? "" : String($t);
      }
      if ($s1 !== ($t = selected === item.id ? 'danger' : '')) {
        $s1 = $t;
        li0.className = $t;
      }
    };
    MD.register({
      id: rowId,
      parent: id,
      render: update
    });
    const text0 = document.createTextNode("");
    if ($s0 !== ($t = item.label)) {
      $s0 = $t;
      text0.data = $t == null || typeof $t === "boolean" ? "" : String($t);
    }
    const li0 = document.createElement("li");
    if ($s1 !== ($t = selected === item.id ? 'danger' : '')) {
      $s1 = $t;
      li0.className = $t;
    }
    li0.onclick = () => {
      selected = item.id;
      MD.commitWrites(WRITES_0);
    };
    li0.appendChild(text0);
    return {
      nodes: [li0],
      entities: [rowId],
      update: update
    };
  }, item => item.id);
  region0.reconcile(items);
  const text0 = document.createTextNode("add");
  const button0 = document.createElement("button");
  button0.onclick = add;
  button0.appendChild(text0);
  const div0 = document.createElement("div");
  div0.appendChild(ul0);
  div0.appendChild(button0);
  return div0;
}"
`;

exports[`M5 compiler — code generation > compiles repeated children with distinct ids and covering patterns 1`] = `
"import * as MD from "../out-runtime";
const WRITES_0 = ["./component.tsx#label"];
MD.installAccessTable({
  readers: {
    "./component.tsx#label": ["App/Tag", "App/Tag/*", "App/Tag[*]", "App/Tag[*]/*"]
  }
}, "App");
// repeated.tsx — same child mounted twice; instances must get distinct
// entity ids and the table must cover both.
let label = 'hello';
function Tag(id, parent) {
  let $s0, $t;
  const update = () => {
    if ($s0 !== ($t = label)) {
      $s0 = $t;
      text0.data = $t == null || typeof $t === "boolean" ? "" : String($t);
    }
  };
  MD.register({
    id: id,
    parent: parent,
    render: update
  });
  const text0 = document.createTextNode("");
  if ($s0 !== ($t = label)) {
    $s0 = $t;
    text0.data = $t == null || typeof $t === "boolean" ? "" : String($t);
  }
  const span0 = document.createElement("span");
  span0.className = "tag";
  span0.appendChild(text0);
  return span0;
}
export function App(id, parent) {
  let $t;
  const swap = () => {
    label = 'world';
    MD.commitWrites(WRITES_0);
  };
  const update = () => {};
  MD.register({
    id: id,
    parent: parent,
    render: update
  });
  const tag = Tag(id + "/Tag", id);
  const tag1 = Tag(id + "/Tag[1]", id);
  const text0 = document.createTextNode("swap");
  const button0 = document.createElement("button");
  button0.onclick = swap;
  button0.appendChild(text0);
  const div0 = document.createElement("div");
  div0.appendChild(tag);
  div0.appendChild(tag1);
  div0.appendChild(button0);
  return div0;
}"
`;

exports[`M5 compiler — code generation > compiles the counter fixture to the emission form 1`] = `
"import * as MD from "../out-runtime";
const WRITES_0 = ["./component.tsx#again", "./component.tsx#count"];
MD.installAccessTable({
  readers: {
    "./component.tsx#again": ["App", "App/*"],
    "./component.tsx#count": ["App", "App/*"]
  }
}, "App");
let count = 0;
let again = 0;
export function Counter(id, parent) {
  let $s0, $s1, $t;
  const inc = () => {
    count++;
    again++;
    MD.commitWrites(WRITES_0);
  };
  const update = () => {
    if ($s0 !== ($t = count)) {
      $s0 = $t;
      text1.data = $t == null || typeof $t === "boolean" ? "" : String($t);
    }
    if ($s1 !== ($t = again)) {
      $s1 = $t;
      text2.data = $t == null || typeof $t === "boolean" ? "" : String($t);
    }
  };
  MD.register({
    id: id,
    parent: parent,
    render: update
  });
  const text0 = document.createTextNode("increment");
  const button0 = document.createElement("button");
  button0.onclick = inc;
  button0.appendChild(text0);
  const text1 = document.createTextNode("");
  if ($s0 !== ($t = count)) {
    $s0 = $t;
    text1.data = $t == null || typeof $t === "boolean" ? "" : String($t);
  }
  const span0 = document.createElement("span");
  span0.appendChild(text1);
  const text2 = document.createTextNode("");
  if ($s1 !== ($t = again)) {
    $s1 = $t;
    text2.data = $t == null || typeof $t === "boolean" ? "" : String($t);
  }
  const span1 = document.createElement("span");
  span1.appendChild(text2);
  const div0 = document.createElement("div");
  div0.className = "counter";
  div0.appendChild(button0);
  div0.appendChild(span0);
  div0.appendChild(span1);
  return div0;
}"
`;

exports[`M5 compiler — code generation > compiles the shared-state fixture with an access table 1`] = `
"import * as MD from "../out-runtime";
const WRITES_0 = ["./component.tsx#name"];
MD.installAccessTable({
  readers: {
    "./component.tsx#name": ["App/Badge", "App/Badge/*"]
  }
}, "App");
// shared.tsx — two siblings sharing module state; the write must route
// to Badge only, never to App or Editor.
let name = 'Ada';
function Badge(id, parent) {
  let $s0, $t;
  const update = () => {
    if ($s0 !== ($t = name)) {
      $s0 = $t;
      text0.data = $t == null || typeof $t === "boolean" ? "" : String($t);
    }
  };
  MD.register({
    id: id,
    parent: parent,
    render: update
  });
  const text0 = document.createTextNode("");
  if ($s0 !== ($t = name)) {
    $s0 = $t;
    text0.data = $t == null || typeof $t === "boolean" ? "" : String($t);
  }
  const span0 = document.createElement("span");
  span0.className = "badge";
  span0.appendChild(text0);
  return span0;
}
function Editor(id, parent) {
  let $t;
  const rename = () => {
    name = 'Grace';
    MD.commitWrites(WRITES_0);
  };
  const update = () => {};
  MD.register({
    id: id,
    parent: parent,
    render: update
  });
  const text0 = document.createTextNode("rename");
  const button0 = document.createElement("button");
  button0.onclick = rename;
  button0.appendChild(text0);
  return button0;
}
export function App(id, parent) {
  let $t;
  const update = () => {};
  MD.register({
    id: id,
    parent: parent,
    render: update
  });
  const badge = Badge(id + "/Badge", id);
  const editor = Editor(id + "/Editor", id);
  const div0 = document.createElement("div");
  div0.appendChild(badge);
  div0.appendChild(editor);
  return div0;
}"
`;
